no need to use FileUtils
Co-authored-by: Basil Crow <me@basilcrow.com>